public interface ComputePrimeAlgorithm {
    
    public String computeNPrimes(int n);
    
}
