public interface Input {

    public String getInput();
}
