public interface Output{

    public void showOutput(String primeNumbers);
    
}
