public class ScreenDisplayOutput implements Output {
    
    @Override
    public void showOutput(String primeNumbers){
        System.out.println("El resultado fue: " + primeNumbers);
    }
}
