' Generated by UML Generator
' Encoded: fLPDRvim6BxpAtoaMXFjZAQgMRj9FIoBnAGTgXuSyuPO1PlP9llekjy-OnkC8S2qNABWz_7pVZzmAnKMgYwBI3vJLc61IqGABEL6AK7tjO87mbbAVm5w6nrf1eXGGGg88ieKY0CcW3xNggeLUeaGUYEF_BjzZYj1IzZMvHw4J52gwLX-bQ0Jfrdq6aN62qg_2RLhW7Uyr9TWK-HSK7Ki3TsAIcECMOAqFtrxpta1c3MkYBsnDGZf8TQJT_6H5l30sWXN1_sum-hO0VNPgk7hSF4GSjMOSr3M6hZmLN09c6Z2BFuvqfJ22QQhiSIZ4v7cdsv0x2hNLUpnwHfDEyOdQDA_f9CsA8So57zm6tvolZeDXXiNYHkYveGoSs2AtJKdO8-NY4t39AZkOFc6IyVUStc7iOKGEmlzM7lsIiy45wLtFsvLYndEbBUu8BghBVcBNbb5oIigCMKn5ddNayUdNbVyPFhXdnXYsy0xpYJlhyeiEYK2WDrJMHNuvoLpynvBIXObu285-09IdHdFhf2Lu2SjRTiDopxyg80eo1ob9GDSljk8l2w1ANdJU5QQqGVUHVnL_zpJmm64HcvTGDS87Ecm1ex8h_sbHAsO_Z_Fg2WXttn5XbYzT1FhjfpAUBpY8IGGhQ7Lg_d0iEjlLrEVJvmyJu22EZQua54FsFJxQxt-VJCXU_wDP41MwMR4VuPgeDm6wQGqdFZLQefYZ9iai946Gj7Fu8maz0EQsVIP3CVBkrvFOM-1PVfRvYy
' URL: http://www.plantuml.com/plantuml/uml/fLPDRvim6BxpAtoaMXFjZAQgMRj9FIoBnAGTgXuSyuPO1PlP9llekjy-OnkC8S2qNABWz_7pVZzmAnKMgYwBI3vJLc61IqGABEL6AK7tjO87mbbAVm5w6nrf1eXGGGg88ieKY0CcW3xNggeLUeaGUYEF_BjzZYj1IzZMvHw4J52gwLX-bQ0Jfrdq6aN62qg_2RLhW7Uyr9TWK-HSK7Ki3TsAIcECMOAqFtrxpta1c3MkYBsnDGZf8TQJT_6H5l30sWXN1_sum-hO0VNPgk7hSF4GSjMOSr3M6hZmLN09c6Z2BFuvqfJ22QQhiSIZ4v7cdsv0x2hNLUpnwHfDEyOdQDA_f9CsA8So57zm6tvolZeDXXiNYHkYveGoSs2AtJKdO8-NY4t39AZkOFc6IyVUStc7iOKGEmlzM7lsIiy45wLtFsvLYndEbBUu8BghBVcBNbb5oIigCMKn5ddNayUdNbVyPFhXdnXYsy0xpYJlhyeiEYK2WDrJMHNuvoLpynvBIXObu285-09IdHdFhf2Lu2SjRTiDopxyg80eo1ob9GDSljk8l2w1ANdJU5QQqGVUHVnL_zpJmm64HcvTGDS87Ecm1ex8h_sbHAsO_Z_Fg2WXttn5XbYzT1FhjfpAUBpY8IGGhQ7Lg_d0iEjlLrEVJvmyJu22EZQua54FsFJxQxt-VJCXU_wDP41MwMR4VuPgeDm6wQGqdFZLQefYZ9iai946Gj7Fu8maz0EQsVIP3CVBkrvFOM-1PVfRvYy
' Generated on: 2025-09-07T20:34:28.557264063

@startuml
skinparam classAttributeIconSize 0
hide circle

interface Output {
  +showOutput(primeNumbers: String): void
}

class SqrtPrimeComputeAlgorithm {
  -isPrime(n: int): boolean
  +computeNPrimes(n: int): String
}

class FileInput {
  -filePath: String
  --
  +FileInput(filePath: String)
  +getInput(): String
}

interface ComputePrimeAlgorithm {
  +computeNPrimes(n: int): String
}

class SievePrimeComputeAlgorithm {
  +computeNPrimes(n: int): String
  -stringOut(isPrime: boolean[], n: int): String
}

class SaveFileOutput {
  +showOutput(primeNumbers: String): void
}

class PrimesNumbers {
  ~algorithm: ComputePrimeAlgorithm
  ~output: Output
  ~input: Input
  --
  +PrimesNumbers(algorithm: ComputePrimeAlgorithm)
  +setAlgorithm(algorithm: ComputePrimeAlgorithm): void
  +setOutput(output: Output): void
  +setInput(input: Input): void
  +performAlgorithm(n: int): String
  +performInput(): String
  +performOutput(n: int): void
  +{static} main(args: String[]): void
}

interface Input {
  +getInput(): String
}

class ConsoleInput {
  +getInput(): String
}

class ScreenDisplayOutput {
  +showOutput(primeNumbers: String): void
}

class BasicPrimeComputeAlgorithm {
  -isPrim(n: int): boolean
  +computeNPrimes(n: int): String
}

class TestPrimesNumbers {
  ~{static} provideNAndExpectedPrimes(): Stream<Arguments>
  +testBasicPrimeAlgorithmWithDifferentN(n: int, expected: String): void
  +testSievePrimeAlgorithmWithDifferentN(n: int, expected: String): void
  +testSqrtPrimeAlgorithmWithDifferentN(n: int, expected: String): void
  ~{static} providePrimeAlgorithms(): Stream<Arguments>
  +testPrimeAlgorithms(alg: ComputePrimeAlgorithm, expected: String): void
  +testScreenDisplayOutput(): void
  +testSaveFileOutput(): void
  +testFileInput(): void
  +testPerformOutputWithMock(): void
  +testPerformAlgorithmWithMockInput(): void
}

SqrtPrimeComputeAlgorithm ..|> ComputePrimeAlgorithm
FileInput ..|> Input
SievePrimeComputeAlgorithm ..|> ComputePrimeAlgorithm
SaveFileOutput ..|> Output
PrimesNumbers --> ComputePrimeAlgorithm
PrimesNumbers --> Output
PrimesNumbers --> Input
ConsoleInput ..|> Input
ScreenDisplayOutput ..|> Output
BasicPrimeComputeAlgorithm ..|> ComputePrimeAlgorithm
TestPrimesNumbers ..> ComputePrimeAlgorithm
@enduml